# that-cats-in-chat-2

./: .env-example  .gitignore  Cargo.toml  README.md
_ollama_models/: Blueberry.Modelfile  Zoey.Modelfile
_scripts/: create_migration.sh  create_new_certs.sh  generate_example_env.bash  refresh_database.bash  revert_diesel_migrations.sh  run_admin.sh  run_chatbot.sh  run_diesel_migrations.sh  rustfmt.sh  update_database_schema.sh  update_ollama_models.sh
admin/: Cargo.toml
admin/src/: main.rs  template_data.rs  tls.rs
admin/src/routes/: core.rs  mod.rs
admin/src/routes/auth/: bot.rs  mod.rs  user.rs
admin/src/sites/: auth.rs  core.rs  mod.rs
admin/src/sites/auth/: mod.rs  twitch.rs
admin/src/sites/bot/: auth.rs
admin/templates/: _base.html  dashboard.html  index.html
admin/templates/head/: _.html  libraries.html
api_consumers/: Cargo.toml
api_consumers/src/: epic.rs  lib.rs  oeis.rs  ollama.rs  openweathermap.rs  time.rs  wikia.rs  wikipedia.rs  words.rs  youtube.rs
api_consumers/src/ollama/: mod.rs
api_consumers/src/twitch/: auth.rs  channel.rs  former_slash_actions.rs  mod.rs  users.rs
api_consumers/src/twitch/auth/: mod.rs  token.rs
certs/: Cargo.toml  cert.pem  key.pem
certs/src/: main.rs
chatbot/: Cargo.toml
chatbot/src/: auth.rs  local_types.rs  main.rs  timed_messages.rs  types.rs
chatbot/src/definitions/: mod.rs  structs.rs  types.rs
chatbot/src/handler/: mod.rs  privmsgs.rs
chatbot/src/handler/privmsgs/: automoderator.rs  mod.rs
chatbot/src/responder/: cooldown.rs  mod.rs  permissions.rs
chatbot/src/responder/api/: epic_store.rs  mod.rs  oeis.rs  ollama.rs  openweathermap.rs  twitch.rs  wikia.rs  wikipedia.rs  words.rs  youtube.rs
chatbot/src/responder/core/: info.rs  maths.rs  mod.rs
chatbot/src/responder/core/emoji/: baked_goods.rs  dairy.rs  drinks.rs  fruit.rs  mod.rs  object.rs
chatbot/src/responder/core/facts/: advice.txt  catfacts.txt  chuckfacts.txt  dadjokes.txt  discord.txt  dogfacts.txt  fight.txt  fortune_cookies.txt  mod.rs  numfacts.txt  rickyisms.txt
chatbot/src/responder/core/info/: mod.rs
chatbot/src/responder/core/niceties/: mod.rs
chatbot/src/responder/game/: marbles_on_stream.rs  mod.rs
chatbot/src/responder/game/colony/: mod.rs
database/: Cargo.toml
database/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
database/migrations/2024-04-03-104715_create_chatbot_channel_table/: down.sql  up.sql
database/migrations/2024-04-07-194655_simplified_for_auth/: down.sql  up.sql
database/migrations/2024-04-08-094505_add_twitch_login_process_table/: down.sql  up.sql
database/migrations/2024-04-08-121505_remove_login_process/: down.sql  up.sql
database/migrations/2024-04-08-121641_readd_login_process_with_different_pk/: up.sql
database/migrations/2024-04-09-141949_add_access_token_to_twitch_login_process_table/: down.sql  up.sql
database/migrations/2024-04-09-151529_change_expiry_type/: down.sql  up.sql
database/migrations/2024-04-11-101941_create_twitch_user_table/: down.sql  up.sql
database/migrations/2024-04-13-112745_create_twitch_bot_table/: up.sql
database/migrations/2024-04-13-133558_add_bot_ownership/: down.sql  up.sql
database/migrations/2024-04-13-151238_change_twitch_bot_pk/: down.sql  up.sql
database/migrations/2024-04-13-151607_update_twitch_bot_table_nullables/: down.sql  up.sql
database/migrations/2024-04-13-152057_remove_twitch_bot_table/: down.sql  up.sql
database/migrations/2024-04-13-152314_readd_twitch_bot_table/: down.sql  up.sql
database/migrations/2024-04-13-152458_remove_twitch_channel_table/: down.sql  up.sql
database/migrations/2024-04-13-152651_make_channel_id_a_reference/: down.sql  up.sql
database/migrations/2024-04-15-094048_add_tables_for_responder_modules/: down.sql  up.sql
database/migrations/2024-04-24-115820_more_commands/: down.sql  up.sql
database/migrations/2024-04-29-150712_fields_to_support_automatic_messaging/: down.sql  up.sql
database/migrations/2024-04-29-202845_fields_for_auto_message_distance/: down.sql  up.sql
database/src/: bot.rs  channel.rs  constants.rs  lib.rs  login.rs  models.rs  responder.rs  schema.rs
database/src/login/: bot.rs  mod.rs  user.rs
database/src/models/: mod.rs  responders.rs
ollama_models/: BaseCat.Modelfile  BaseCatModel  FridayModel
twitch_api/: Cargo.toml
types/: Cargo.toml
types/src/: auth.rs  database.rs  get.rs  lib.rs  twitch.rs
utils/: Cargo.toml
utils/src/: file.rs  lib.rs  message.rs  metric.rs  num.rs  rand.rs  serde_json.rs  twitch.rs  url.rs
