[package]
name = "admin"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.5.1", features = ["rustls-0_22"] }
api_consumers = { path="../api_consumers" }
askama = { version = "0.12.1", features = ["with-actix-web"] }
askama_actix = "0.14.0"
database = { path="../database" }
dotenvy = "0.15.7"
env_logger = "0.11.3"
reqwest = "0.12.3"
rustls = "0.22"
rustls-pemfile = "2.1.2"
serde = "1.0.197"
serde_json = "1.0.115"
types = { path="../types" }
utils = { path="../utils" }
