[package]
name = "api_consumers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { path="../database" }
reqwest = "0.12.3"
serde = "1.0.197"
serde_json = "1.0.116"
types = { path="../types" }
utils = { path="../utils" }
