[package]
name = "api_consumers"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { path="../database" }
google-youtube3 = "5.0.4"
ollama-rs = "0.1.9"
reqwest = { version = "0.12.3", features = ["json"] }
serde = "1.0.197"
tracing = "0.1.40"
types = { path="../types" }
utils = { path="../utils" }
