[package]
name = "chatbot"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { path="../database" }
dotenvy = "0.15.7"
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
twitch-irc = { version = "5.0.1", features = ["refreshing-token-native-tls"] }
