[package]
name = "database"
version = "0.1.19"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
chrono = "0.4.37"
diesel = { version = "2.1.0", features = ["postgres", "chrono"] }
tracing = "0.1.40"
types = { path="../types"}
