[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

database = { path="../database" }
rand = "0.8.5"
reqwest = "0.12.4"
serde_json = "1.0.116"
twitch-irc = "5.0.1"
url = "2.5.0"
